[package]
name = "modes"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../base/"}
rayon = "1.0.0"
tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "4e2db92", features = ["integer", "nightly-avx512", "noise-asserts", "boolean"]}
dashmap = "6.0.0"
num_cpus = "1.16.0"