[package]
name = "tfhe-aes"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "4e2db92", features = ["integer", "nightly-avx512", "noise-asserts", "shortint", "internal-keycache", "boolean"]}
base = { path = "../base/"}
aes = "0.8.0"
rayon = "1.0.0"
