[package]
name = "tfhe_aes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
base = { path = "../base/"}
cbc = "0.1.2"
clap = { version = "4.5.23", features = ["derive"] }
ctr = "0.9.2"
dashmap = "6.0.0"
hex = "0.4"
hex-literal = "0.4.1"
rand = "0.8"